ADDED User Controller, CHANGED Publication Controller
