# src/main/java/com/GameForum/dto/publication/PublicationDto.java
@@ -1,6 +1,7 @@
 package com.GameForum.dto.publication;
 
-import com.GameForum.model.publication.PublicationStatus;
+import com.GameForum.model.publication.*;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.Data;
 
 import java.util.List;
@@ -10,8 +11,7 @@ public class PublicationDto {
     private Long id;
     private CategoryDto category;
     private String title;
-    private String content;
-    private List<String> photoUrl;
+    private ContentDto content;
     private List<TagDto> tag;
     private PublicationStatus status;
 }
