# src/main/java/com/GameForum/dto/user/UserDataDto.java
@@ -1,0 +1,9 @@
+package com.GameForum.dto.user;
+
+import lombok.Data;
+
+@Data
+public class UserDataDto {
+    private String username;
+    private String password;
+}
