# src/main/java/com/GameForum/model/user/UserStatus.java
@@ -1,0 +1,6 @@
+package com.GameForum.model.user;
+
+public enum UserStatus {
+    ONLINE,
+    OFFLINE
+}
